# CloudOne-Public

./: GEMINI.md  README.md  pyproject.toml  run.py
cloudone_app/: __init__.py  config.py
cloudone_app/blueprints/: views.py
cloudone_app/blueprints/api/: __init__.py  account.py  advisor.py  ai.py  carbon.py  dashboard.py  iac.py  migrate.py  monitoring.py  policy.py  resources.py  security.py
cloudone_app/services/: ai_service.py
cloudone_app/static/css/: main.css
cloudone_app/templates/: advisor_recommendations.html  azure_landing.html  carbon_footprint.html  cloud_providers.html  environment_security_score.html  iac_generator.html  index.html  migration_bot.html  my_resources.html  orphaned_resources.html  policy_manager.html  resource_optimization.html  smart_monitoring.html
prd/: base.md
